# vee.theengineer

./: README.md  SERVICE-CHECKBOXES.md
demo/: _template.md
demo/pyshiftsla-open-source-python-package/: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
demo/pyshiftsla-open-source-python-package/app/: main.py
demo/pyshiftsla-open-source-python-package/assets/: pyshifsla-workshifts-and-SLA-calculator.pptx
demo/pyshiftsla-open-source-python-package/customer-service-dummy-db/: docker-compose.yaml  init.sql
demo/pyshiftsla-open-source-python-package/deprecated/: insert_dummy_data_into_db.py
demo/pyshiftsla-open-source-python-package/deprecated/customer-service-dummy-db/: init.sql
demo/pyshiftsla-open-source-python-package/steps/: generate_employee_workshift.py  insert_dummy_data_into_db.py
demo/scrape-images-AI-tags/: README.md
demo/scrape-images-AI-tags/project-code/: .gitignore  README.md  pyproject.toml
demo/scrape-images-AI-tags/project-code/combine_data/: image_tags.csv  show.ipynb
demo/scrape-images-AI-tags/project-code/holden_scrape/: scrape_info.json  scrapy.cfg
demo/scrape-images-AI-tags/project-code/holden_scrape/holden_scrape/: items.py  middlewares.py  pipelines.py  settings.py
demo/scrape-images-AI-tags/project-code/holden_scrape/holden_scrape/spiders/: holden_wallpaper_spider.py
demo/scrape-images-AI-tags/project-code/image_tagging/: colourrgbs.json  tags.json  test_tagging.ipynb
