[project]
name = "pyshiftsla-open-source-python-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faker>=33.1.0",
    "holidays>=0.62",
    "psycopg2>=2.9.10",
    "pyshiftsla>=0.4.0",
    "sqlalchemy>=2.0.36",
]
