[project]
name = "holden-wallpaper-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "notebook>=7.3.3",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "scrapy>=2.12.0",
    "ultralytics>=8.3.96",
]
